[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/SubScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/DiscreteScene.tscn" type="PackedScene" id=4]

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Examples" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SameScene" type="HBoxContainer" parent="Examples"]
margin_right = 1016.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="Examples/SameScene"]
margin_right = 158.0
margin_bottom = 30.0
text = "Plugin Version:"

[node name="lblVersion" type="Label" parent="Examples/SameScene"]
margin_left = 162.0
margin_right = 170.0
margin_bottom = 30.0

[node name="SubScene" parent="Examples" instance=ExtResource( 3 )]

[node name="Label" parent="Examples/SubScene/Form" index="0"]
margin_top = 0.0
margin_right = 58.0
margin_bottom = 30.0
text = "Name:"

[node name="txtName" parent="Examples/SubScene/Form" index="1"]
margin_left = 62.0

[node name="$DiscreteScene" parent="Examples" instance=ExtResource( 4 )]

[node name="Label" parent="Examples/$DiscreteScene/Rows" index="0"]
margin_bottom = 30.0

[node name="txtContent" parent="Examples/$DiscreteScene/Rows" index="1"]
margin_top = 34.0
margin_bottom = 474.0

[node name="btnClear" parent="Examples/$DiscreteScene/Rows" index="2"]
margin_top = 478.0

[editable path="Examples/SubScene"]
[editable path="Examples/$DiscreteScene"]
